# viddrop

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-builder.md  codebase-researcher.md  frontend-builder.md  implementation-validator.md  story-writer.md  tech-brief-writer.md  test-verifier.md
.claude/hooks/: pre-commit.sh
.claude/skills/build-with-tests/: SKILL.md
.claude/skills/feature-factory/: SKILL.md
src/viddrop/core/: conversion_worker.py  converter.py  credential_store.py  database.py  download_worker.py  downloader.py  queue_manager.py
src/viddrop/utils/: logger.py  sanitize.py
tests/: conftest.py
tests/acceptance/: test_ac_ffmpeg_converter_backend.py
tests/unit/core/: test_conversion_worker.py  test_converter.py  test_credential_store.py  test_database.py  test_download_worker.py  test_downloader.py  test_queue_manager.py  test_queue_manager_conversion.py
