[project]
name = "viddrop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ast_serialize==0.5.0",
    "cffi==2.0.0",
    "cryptography==48.0.0",
    "iniconfig==2.3.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.1.2",
    "jaraco.functools==4.5.0",
    "jeepney==0.9.0",
    "keyring==25.7.0",
    "librt==0.11.0",
    "more-itertools==11.1.0",
    "mypy==2.1.0",
    "mypy_extensions==1.1.0",
    "packaging==26.2",
    "pathspec==1.1.1",
    "pluggy==1.6.0",
    "pycparser==3.0",
    "Pygments==2.20.0",
    "PyQt6==6.11.0",
    "PyQt6-Qt6==6.11.1",
    "PyQt6_sip==13.11.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-qt==4.5.0",
    "ruff==0.15.15",
    "SecretStorage==3.5.0",
    "typing_extensions==4.15.0",
    "uv==0.11.17",
    "yt-dlp==2026.3.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
